@@ -2,6 +2,8 @@ This file documents the revision history for the SNClient+ agent.
 
 next:
          - check_service (linux): add rss/vms/cpu/task metric and remove generic mem metric
+         - check_service: add more metrics
+         - add duration / date / human number macro post processors
          - add support for %{} macros and $() as well
 
 0.13     Thu Nov 23 22:20:21 CET 2023
